fixing spacing on article on desktop

--- a/style.css
+++ b/style.css
@@ -2163,7 +2163,7 @@ body:not(.search-results) .entry-summary > :last-child,
 
 @media (min-width:1200px) {
 	#secondary {
-		padding: 0px 20px;
+		padding: 0px 40px;
 	}
 	.site-main > article {
 		padding-right:40px;
